# storage-api

./: .env.example  .gitignore  pyproject.toml
src/: main.py
src/repositories/fakes/: sqlalchemy_postgres_fake_repository.py
src/repositories/implementations/: boto_minio_repository.py  files_metadata_repository.py  files_metadata_sqlalchemy_repository.py  sqlalchemy_repository.py  sqlalchemy_session.py  user_sqlalchemy_repository.py
src/repositories/implementations/sessions/: sqlalchemy_session.py
src/repositories/interfaces/: files_metadata_interface.py  users_interface.py
src/repositories/models/: file_sqlalchemy_model.py  user_sqlalchemy_model.py
src/routers/: files_route.py  users_route.py
src/schemas/: file_metadata_schema.py  user_schema.py
src/services/: files_service.py  users_service.py
src/utils/: all_fields_optional.py  app_types.py  pagination.py  pydantic_base_schema.py  sqlalchemy_base_model.py
